--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  flutter_dotenv: ^5.1.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
@@ -18,3 +19,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - .env
