--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,10 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  dio: ^5.3.2
   flutter_dotenv: ^5.1.0
   flutter_lints: ^2.0.0
+  flutter_riverpod: ^2.3.6
   flutter_test:
     sdk: flutter
   go_router: ^10.0.0
