--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  animate_do: ^3.0.2
+  card_swiper: ^3.0.1
   dio: ^5.3.2
   flutter_dotenv: ^5.1.0
   flutter_lints: ^2.0.0
@@ -18,6 +20,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   go_router: ^10.0.0
+  intl: ^0.18.1
 
 flutter:
   uses-material-design: true
