--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,20 +7,24 @@ environment:
   sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
-  flutter:
-    sdk: flutter
-
-dev_dependencies:
   animate_do: ^3.0.2
   card_swiper: ^3.0.1
   dio: ^5.3.2
-  flutter_dotenv: ^5.1.0
-  flutter_lints: ^2.0.0
-  flutter_riverpod: ^2.3.6
-  flutter_test:
+  flutter:
     sdk: flutter
+  flutter_dotenv: ^5.1.0
+  flutter_riverpod: ^2.3.6
   go_router: ^10.0.0
   intl: ^0.18.1
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+
+dev_dependencies:
+  build_runner: ^2.4.6
+  flutter_lints: ^2.0.0
+  flutter_test:
+    sdk: flutter
+  isar_generator: ^3.1.0+1
 
 flutter:
   uses-material-design: true
